--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -13,7 +13,7 @@ html {
 body,
 h1,
 h2,
-h3,
+h3
 h4,
 h5,
 h6 {
@@ -23,6 +23,10 @@ h6 {
 
 .topnav {
     font-size: 14px;
+    background-color: #000;
+    opacity: 0.9;
+    filter: alpha(opacity=30); /* For IE8 and earlier */ ;
+    padding-bottom: 2.5px;
 }
 
 .lead {
@@ -35,14 +39,14 @@ h6 {
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(../img/intro-bg.jpg) no-repeat center center;
+    background: url(../img/banner-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
 .intro-message {
     position: relative;
-    padding-top: 20%;
-    padding-bottom: 20%;
+    padding-top: 10%;
+    padding-bottom: 10%;
 }
 
 .intro-message > h1 {
@@ -114,7 +118,7 @@ h6 {
 }
 
 .banner {
-    padding: 100px 0;
+    padding: 50px 0;
     color: #f8f8f8;
     background: url(../img/banner-bg.jpg) no-repeat center center;
     background-size: cover;
@@ -123,7 +127,7 @@ h6 {
 .banner h2 {
     margin: 0;
     text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-    font-size: 3em;
+    font-size: 2.85em;
 }
 
 .banner ul {
@@ -146,7 +150,7 @@ h6 {
     .banner h2 {
         margin: 0;
         text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
-        font-size: 3em;
+        font-size: 2.85em;
     }
 
     ul.banner-social-buttons > li {
@@ -168,3 +172,21 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+
+/** Modual **/
+
+#myModal {
+  color: #000
+}
+
+#myModalLabel {
+	   font-size:30px;
+   }
+   form {
+     display: block;
+
+   }
+   span {
+     display:block;
+     color: red;
+   }
