--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -175,18 +175,52 @@ p.copyright {
 
 /** Modual **/
 
+
 #myModal {
+  margin: 0 auto 50px;
+  font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: 700;
   color: #000
 }
 
 #myModalLabel {
-	   font-size:30px;
-   }
-   form {
-     display: block;
+  font-size:30px;
+}
 
+#myModal label {
+  display:block;
+  margin: 20px 20px auto 2%;
+  float: left;
+  width: auto;
+  margin-right: 2%;
+}
+
+#myModal text-area {
+  color: red;
+}
+
+#myModal span {
+  display: block;
+     }
+
+#myModal .text-area {
+  margin-top: 50px;
+  width: 100%;
+  height: 10em;
+}
+
+#myModal submit-button {
+  margin-top: 50px;
+}
+
+/*
+form {
+     margin: 0 auto 100px;
    }
-   span {
-     display:block;
-     color: red;
-   }
+
+/*
+     input, textarea {
+       border: 3px solid;
+       width: 100%;
+     }
+*/
